# aperture-ai

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  SECURITY_FIXES_PLAN.md  TODO.md  main.py  pyproject.toml
.claude/: settings.json
aiperture/: cli.py  config.py  mcp_server.py  metrics.py
aiperture/api/: app.py
aiperture/api/routes/: hooks.py
aiperture/hooks/: __init__.py  pending_tracker.py  tool_mapping.py
aiperture/permissions/: challenge.py  engine.py
aperture/: __init__.py  cli.py  config.py  mcp_server.py
aperture/api/: __init__.py  app.py
aperture/api/routes/: artifacts.py  audit.py  config.py  intelligence.py  permissions.py
aperture/db/: __init__.py  engine.py
aperture/models/: __init__.py  artifact.py  audit.py  intelligence.py  permission.py  verdict.py
aperture/permissions/: __init__.py  challenge.py  crowd.py  engine.py  explainer.py  intelligence.py  learning.py  resource.py  risk.py  similarity.py
aperture/stores/: __init__.py  artifact_store.py  audit_store.py
claude/plans/: 2026-03-01-intelligent-permission-verdicts.md
docs/: release-pip.md  releasing.md  setup-claude-code.md  setup-openclaw.md
examples/: openclaw.json  openclaw_demo.py  openclaw_setup.sh  system_prompt.md
tests/: conftest.py  test_api.py  test_artifacts.py  test_cli.py  test_config_api.py  test_content_awareness.py  test_crowd.py  test_decision_logging.py  test_explainer.py  test_hooks.py  test_intelligence.py  test_mcp.py  test_openclaw_integration.py  test_permissions.py  test_resource.py  test_revocation.py  test_risk.py  test_similarity.py
