[project]
name = "aiperture"
version = "0.7.0"
description = "The permission layer for AI agents. Controls what passes through."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Adnan Zaib" },
]
keywords = ["ai", "agents", "permissions", "mcp", "rbac", "security", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "mcp>=1.2.0",
    "prometheus_client>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/pakistan/aiperture"
Repository = "https://github.com/pakistan/aiperture"
Issues = "https://github.com/pakistan/aiperture/issues"
Documentation = "https://github.com/pakistan/aiperture#readme"

[project.scripts]
aiperture = "aiperture.cli:main"

[project.entry-points."aiperture.plugins"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiperture"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
